--- a/elements.html
+++ b/elements.html
@@ -36,7 +36,7 @@
     <!-- Preloader Start -->
     <header>
         <!-- Header Start -->
-        <div class="header-area">
+		<div class="header-area">
             <div class="main-header ">
                 <div class="header-top d-none d-lg-block">
                     <div class="container-fluid">
@@ -44,8 +44,8 @@
                             <div class="row d-flex justify-content-between align-items-center">
                                 <div class="header-info-left d-flex">
                                     <ul>     
-                                        <li>Phone: +99 (0) 101 0000 888</li>
-                                        <li>Email: noreply@yourdomain.com</li>
+                                        <li>Phone: +251999999999</li>
+                                        <li>Email: example@yourdomain.com</li>
                                     </ul>
                                     <div class="header-social">    
                                         <ul>
@@ -62,9 +62,8 @@
                                             <div class="select-itms">
                                                 <select name="select" id="select1">
                                                     <option value="">English</option>
-                                                    <option value="">Bangla</option>
-                                                    <option value="">Arabic</option>
-                                                    <option value="">Hindi</option>
+                                                    <option value="">Afan Oromo</option>
+                                                    <option value="">Amharic</option>
                                                 </select>
                                             </div>
                                         </form>
@@ -109,7 +108,7 @@
                                     </div>
                                     <!-- Header-btn -->
                                     <div class="header-right-btn d-none d-lg-block ml-20">
-                                        <a href="contact.html" class="btn header-btn">Donate</a>
+                                        <a href="donate.html" class="btn header-btn">Donate</a>
                                     </div>
                                 </div>
                             </div> 
@@ -807,8 +806,8 @@
                                         <li>
                                             <p>Address :Your address goes here, your demo address.</p>
                                         </li>
-                                        <li><a href="#">Phone : +8880 44338899</a></li>
-                                        <li><a href="#">Email : info@colorlib.com</a></li>
+                                        <li><a href="#">Phone : +251999999999</a></li>
+                                        <li><a href="#">Email : info@yourdomain.com</a></li>
                                     </ul>
                                 </div>
 
@@ -865,14 +864,14 @@
                             <div class="col-xl-10 col-lg-9 ">
                                 <div class="footer-copy-right">
                                     <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://hire-9f26e.web.app/" target="_blank">Hiriyan</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                                 </div>
                             </div>
                             <div class="col-xl-2 col-lg-3">
                                 <div class="footer-social f-right">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a  href="https://www.facebook.com/sai4ull"><i class="fab fa-facebook-f"></i></a>
+                                    <a  href="#"><i class="fab fa-facebook-f"></i></a>
                                     <a href="#"><i class="fas fa-globe"></i></a>
                                     <a href="#"><i class="fab fa-behance"></i></a>
                                 </div>
