--- a/blog_details.html
+++ b/blog_details.html
@@ -38,91 +38,90 @@
    <header>
       <!-- Header Start -->
       <div class="header-area">
-          <div class="main-header ">
-              <div class="header-top d-none d-lg-block">
-                  <div class="container-fluid">
-                      <div class="col-xl-12">
-                          <div class="row d-flex justify-content-between align-items-center">
-                              <div class="header-info-left d-flex">
-                                  <ul>     
-                                      <li>Phone: +99 (0) 101 0000 888</li>
-                                      <li>Email: noreply@yourdomain.com</li>
-                                  </ul>
-                                  <div class="header-social">    
-                                      <ul>
-                                          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                          <li><a  href="https://www.facebook.com/sai4ull"><i class="fab fa-facebook-f"></i></a></li>
-                                          <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                          <li> <a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                      </ul>
-                                  </div>
-                              </div>
-                              <div class="header-info-right d-flex align-items-center">
-                                  <div class="select-this">
-                                      <form action="#">
-                                          <div class="select-itms">
-                                              <select name="select" id="select1">
-                                                  <option value="">English</option>
-                                                  <option value="">Bangla</option>
-                                                  <option value="">Arabic</option>
-                                                  <option value="">Hindi</option>
-                                              </select>
-                                          </div>
-                                      </form>
-                                  </div>
-                                  <ul class="contact-now">     
-                                      <li><a href="#">Subscribe Now</a></li>
-                                  </ul>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-              <div class="header-bottom  header-sticky">
-                  <div class="container-fluid">
-                      <div class="row align-items-center">
-                          <!-- Logo -->
-                          <div class="col-xl-2 col-lg-2">
-                              <div class="logo">
-                                  <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
-                              </div>
-                          </div>
-                          <div class="col-xl-10 col-lg-10">
-                              <div class="menu-wrapper  d-flex align-items-center justify-content-end">
-                                  <!-- Main-menu -->
-                                  <div class="main-menu d-none d-lg-block">
-                                      <nav>
-                                          <ul id="navigation">                                                                                          
-                                              <li><a href="index.html">Home</a></li>
-                                              <li><a href="about.html">About</a></li>
-                                              <li><a href="program.html">latest causes</a></li>
-                                              <li><a href="events.html">social events </a></li>
-                                              <li><a href="blog.html">Blog</a>
-                                                  <ul class="submenu">
-                                                      <li><a href="blog.html">Blog</a></li>
-                                                      <li><a href="blog_details.html">Blog Details</a></li>
-                                                      <li><a href="elements.html">Element</a></li>
-                                                  </ul>
-                                              </li>
-                                              <li><a href="contact.html">Contact</a></li>
-                                          </ul>
-                                      </nav>
-                                  </div>
-                                  <!-- Header-btn -->
-                                  <div class="header-right-btn d-none d-lg-block ml-20">
-                                      <a href="contact.html" class="btn header-btn">Donate</a>
-                                  </div>
-                              </div>
-                          </div> 
-                          <!-- Mobile Menu -->
-                          <div class="col-12">
-                              <div class="mobile_menu d-block d-lg-none"></div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
+         <div class="main-header ">
+             <div class="header-top d-none d-lg-block">
+                 <div class="container-fluid">
+                     <div class="col-xl-12">
+                         <div class="row d-flex justify-content-between align-items-center">
+                             <div class="header-info-left d-flex">
+                                 <ul>     
+                                     <li>Phone: +251999999999</li>
+                                     <li>Email: example@yourdomain.com</li>
+                                 </ul>
+                                 <div class="header-social">    
+                                     <ul>
+                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                         <li><a  href="https://www.facebook.com/sai4ull"><i class="fab fa-facebook-f"></i></a></li>
+                                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                         <li> <a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                                     </ul>
+                                 </div>
+                             </div>
+                             <div class="header-info-right d-flex align-items-center">
+                                 <div class="select-this">
+                                     <form action="#">
+                                         <div class="select-itms">
+                                             <select name="select" id="select1">
+                                                 <option value="">English</option>
+                                                 <option value="">Afan Oromo</option>
+                                                 <option value="">Amharic</option>
+                                             </select>
+                                         </div>
+                                     </form>
+                                 </div>
+                                 <ul class="contact-now">     
+                                     <li><a href="#">Subscribe Now</a></li>
+                                 </ul>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+             <div class="header-bottom  header-sticky">
+                 <div class="container-fluid">
+                     <div class="row align-items-center">
+                         <!-- Logo -->
+                         <div class="col-xl-2 col-lg-2">
+                             <div class="logo">
+                                 <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                             </div>
+                         </div>
+                         <div class="col-xl-10 col-lg-10">
+                             <div class="menu-wrapper  d-flex align-items-center justify-content-end">
+                                 <!-- Main-menu -->
+                                 <div class="main-menu d-none d-lg-block">
+                                     <nav>
+                                         <ul id="navigation">                                                                                          
+                                             <li><a href="index.html">Home</a></li>
+                                             <li><a href="about.html">About</a></li>
+                                             <li><a href="program.html">latest causes</a></li>
+                                             <li><a href="events.html">social events </a></li>
+                                             <li><a href="blog.html">Blog</a>
+                                                 <ul class="submenu">
+                                                     <li><a href="blog.html">Blog</a></li>
+                                                     <li><a href="blog_details.html">Blog Details</a></li>
+                                                     <li><a href="elements.html">Element</a></li>
+                                                 </ul>
+                                             </li>
+                                             <li><a href="contact.html">Contact</a></li>
+                                         </ul>
+                                     </nav>
+                                 </div>
+                                 <!-- Header-btn -->
+                                 <div class="header-right-btn d-none d-lg-block ml-20">
+                                     <a href="donate.html" class="btn header-btn">Donate</a>
+                                 </div>
+                             </div>
+                         </div> 
+                         <!-- Mobile Menu -->
+                         <div class="col-12">
+                             <div class="mobile_menu d-block d-lg-none"></div>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+         </div>
+     </div>
       <!-- Header End -->
   </header>
    <main>
@@ -575,8 +574,8 @@
                                       <li>
                                           <p>Address :Your address goes here, your demo address.</p>
                                       </li>
-                                      <li><a href="#">Phone : +8880 44338899</a></li>
-                                      <li><a href="#">Email : info@colorlib.com</a></li>
+                                      <li><a href="#">Phone : +251999999999</a></li>
+                                      <li><a href="#">Email : info@yourdomain.com</a></li>
                                   </ul>
                               </div>
 
@@ -633,14 +632,14 @@
                           <div class="col-xl-10 col-lg-9 ">
                               <div class="footer-copy-right">
                                   <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://hire-9f26e.web.app/" target="_blank">Hiriyan</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                               </div>
                           </div>
                           <div class="col-xl-2 col-lg-3">
                               <div class="footer-social f-right">
                                   <a href="#"><i class="fab fa-twitter"></i></a>
-                                  <a  href="https://www.facebook.com/sai4ull"><i class="fab fa-facebook-f"></i></a>
+                                  <a  href="#"><i class="fab fa-facebook-f"></i></a>
                                   <a href="#"><i class="fas fa-globe"></i></a>
                                   <a href="#"><i class="fab fa-behance"></i></a>
                               </div>
