--- a/donate.html
+++ b/donate.html
@@ -25,6 +25,12 @@
 	<link rel="stylesheet" href="assets/css/nice-select.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
+<style>
+    /* Custom CSS for adjusting input height */
+    .custom-input {
+      height: 40px; /* Adjust the height as needed */
+    }
+  </style>
 <body>
 
         <!-- ? Preloader Start -->
@@ -155,43 +161,43 @@
                 <div class="card-body">
                     <h2 class="text-center mb-4">Payment Details</h2>
                     <form id="paymentForm" method="POST" action="https://api.chapa.co/v1/hosted/pay">
-                        <div class="form-group">
+                        <div class="form-group mb-4">
                             <label for="fname">First Name</label>
                             <input 
                                 id="fname"
                                 type="text"
                                 placeholder='John'
-                                class="form-control"
+                                class="form-control custom-input"
                                 required
                             >
                         </div>
-                        <div class="form-group">
+                        <div class="form-group mb-4">
                             <label for="lname">Last Name</label>
                             <input 
                                 id="lname"
                                 type="text"
                                 placeholder='Doe'
-                                class="form-control"
+                                class="form-control custom-input"
                                 required
                             >
                         </div>
-                        <div class="form-group">
+                        <div class="form-group mb-4">
                             <label for="email">Email</label>
                             <input 
                                 id="email"
                                 type="email"
                                 placeholder='john@example.com'
-                                class="form-control"
+                                class="form-control custom-input"
                                 required
                             >
                         </div>
-                        <div class="form-group">
+                        <div class="form-group mb-4">
                             <label for="amount">Amount</label>
                             <input 
                                 id="amount"
                                 type="text"
                                 placeholder='100'
-                                class="form-control"
+                                class="form-control custom-input"
                                 required
                             >
                         </div>
