--- a/events.html
+++ b/events.html
@@ -215,7 +215,7 @@
                                 <ul>
                                     <li><i class="far fa-clock"></i>8:30 - 9:30am</li>
                                     <li><i class="fas fa-sort-amount-down"></i>18.01.2021</li>
-                                    <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                    <li><i class="fas fa-map-marker-alt"></i>Ethiopia, Ethiopia</li>
                                 </ul>
                             </div>
                         </div>
@@ -233,7 +233,7 @@
                                 <ul>
                                     <li><i class="far fa-clock"></i>8:30 - 9:30am</li>
                                     <li><i class="fas fa-sort-amount-down"></i>18.01.2021</li>
-                                    <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                    <li><i class="fas fa-map-marker-alt"></i>Ethiopia, Ethiopia</li>
                                 </ul>
                             </div>
                         </div>
@@ -251,7 +251,7 @@
                                 <ul>
                                     <li><i class="far fa-clock"></i>8:30 - 9:30am</li>
                                     <li><i class="fas fa-sort-amount-down"></i>18.01.2021</li>
-                                    <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                    <li><i class="fas fa-map-marker-alt"></i>Ethiopia, Ethiopia</li>
                                 </ul>
                             </div>
                         </div>
@@ -269,7 +269,7 @@
                                 <ul>
                                     <li><i class="far fa-clock"></i>8:30 - 9:30am</li>
                                     <li><i class="fas fa-sort-amount-down"></i>18.01.2021</li>
-                                    <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                    <li><i class="fas fa-map-marker-alt"></i>Ethiopia, Ethiopia</li>
                                 </ul>
                             </div>
                         </div>
@@ -287,7 +287,7 @@
                                 <ul>
                                     <li><i class="far fa-clock"></i>8:30 - 9:30am</li>
                                     <li><i class="fas fa-sort-amount-down"></i>18.01.2021</li>
-                                    <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                    <li><i class="fas fa-map-marker-alt"></i>Ethiopia, Ethiopia</li>
                                 </ul>
                             </div>
                         </div>
@@ -305,7 +305,7 @@
                                 <ul>
                                     <li><i class="far fa-clock"></i>8:30 - 9:30am</li>
                                     <li><i class="fas fa-sort-amount-down"></i>18.01.2021</li>
-                                    <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                    <li><i class="fas fa-map-marker-alt"></i>Ethiopia, Ethiopia</li>
                                 </ul>
                             </div>
                         </div>
