--- a/donate.html
+++ b/donate.html
@@ -392,7 +392,8 @@
 
             document.addEventListener("DOMContentLoaded", function() {
                 // const public_key = 'CHAPUBK_TEST-QMp65W5yeAhpg8KRoBmv7lfvam6gnqsv';
-                const public_key  = 'CHAPUBK-AplCFXYweRd5d8yChJDDRxJRxnviZQjD'
+                // const public_key  = 'CHAPUBK-AplCFXYweRd5d8yChJDDRxJRxnviZQjD'
+                const public_key  = 'CHAPUBK-HENlmzqWejSZcJVINMovCtdZDxHSfIBZ'
 
                 // Set initial values
                 document.getElementById("public_key").value = public_key;
